--- a/changelog
+++ b/changelog
@@ -1,9 +1,17 @@
+= 1.6.2 =
+* Bugfix for more complex templates - accessing post thumbnails failed.
+
 = 1.6.1 =
 * Regression fix: Notice was emitted by PHP about invalid variable. This was cosmetic only, and had no impact on functionality.
 
 = 1.6.0 =
 * Fix bug of case sensitity in listings order
 * Better warning of deprecated functions when called by other plugins or themes
+
+= 1.5.4 =
+* Fix post links when using an alternative titles taxonomy (discovered by [bugnumber9](https://profiles.wordpress.org/bugnumber9))
+* Ensure that we don't access rogue objects. Warnings and errors in 1.5.3 are squashed now.
+* Verified that [tests](https://travis-ci.org/bowlhat/wp-a-z-listing) pass correctly before releasing this version.
 
 = 1.5.3 =
 * Regression in 1.5.2 causing empty listing is fixed
