--- a/languages/a-z-listing.pot
+++ b/languages/a-z-listing.pot
@@ -2,9 +2,9 @@
 # This file is distributed under the same license as the A-Z Listing package.
 msgid ""
 msgstr ""
-"Project-Id-Version: A-Z Listing 2.3.0\n"
+"Project-Id-Version: A-Z Listing 3.0.0\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/a-z-listing\n"
-"POT-Creation-Date: 2019-06-19 22:04:30+00:00\n"
+"POT-Creation-Date: 2019-07-04 16:44:32+00:00\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -24,33 +24,6 @@ msgstr ""
 "X-Textdomain-Support: yes\n"
 "X-Generator: grunt-wp-i18n 1.0.3\n"
 
-#: classes/class-a-z-listing.php:338
-#. translators: List the aphabet of your language in the order that your
-#. language prefers. list as groups of identical meanings but different
-#. characters together, e.g. in English we group A with a because they are both
-#. the same letter but different character-code. Each character group should be
-#. followed by a comma separating it from the next group. Any amount of
-#. characters per group are acceptible, and there is no requirement for all the
-#. groups to contain the same amount of characters as all the others. Be
-#. careful with the character you place first in each group as that will be
-#. used as the identifier for the group which gets displayed on the page, e.g.
-#. in English a group definition of "Aa" will indicate that we display all the
-#. posts in the group, i.e. whose titles begin with either "A" or "a", listed
-#. under a heading of "A" (the first character in the definition).
-msgid ""
-"AÁÀÄÂaáàäâ,Bb,CÇcç,Dd,EÉÈËÊeéèëê,Ff,Gg,Hh,IÍÌÏÎiíìïî,Jj,Kk,Ll,Mm,Nn,"
-"OÓÒÖÔoóòöô,Pp,Qq,Rr,Ssß,Tt,UÚÙÜÛuúùüû,Vv,Ww,Xx,Yy,Zz"
-msgstr ""
-
-#: classes/class-a-z-listing.php:340
-#. translators: This should be a single character to denote "all entries that
-#. didn't fit under one of the alphabet character groups defined". This is used
-#. in English to categorise posts whose title begins with a numeric (0 through
-#. to 9), or some other character that is not a standard English alphabet
-#. letter.
-msgid "#"
-msgstr ""
-
 #: functions/health-check.php:19
 msgid "A to Z Listing plugin"
 msgstr ""
@@ -60,7 +33,7 @@ msgid "A-Z Listing: PHP mbstring module is enabled"
 msgstr ""
 
 #: functions/health-check.php:38
-msgid "mbstring"
+msgid "Compatibility"
 msgstr ""
 
 #: functions/health-check.php:43
@@ -83,6 +56,33 @@ msgstr ""
 msgid ""
 "Contact your web host to request that the mbstring PHP module is enabled "
 "for your site."
+msgstr ""
+
+#: src/Query.php:355
+#. translators: List the aphabet of your language in the order that your
+#. language prefers. list as groups of identical meanings but different
+#. characters together, e.g. in English we group A with a because they are both
+#. the same letter but different character-code. Each character group should be
+#. followed by a comma separating it from the next group. Any amount of
+#. characters per group are acceptible, and there is no requirement for all the
+#. groups to contain the same amount of characters as all the others. Be
+#. careful with the character you place first in each group as that will be
+#. used as the identifier for the group which gets displayed on the page, e.g.
+#. in English a group definition of "Aa" will indicate that we display all the
+#. posts in the group, i.e. whose titles begin with either "A" or "a", listed
+#. under a heading of "A" (the first character in the definition).
+msgid ""
+"AÁÀÄÂaáàäâ,Bb,CÇcç,Dd,EÉÈËÊeéèëê,Ff,Gg,Hh,IÍÌÏÎiíìïî,Jj,Kk,Ll,Mm,Nn,"
+"OÓÒÖÔoóòöô,Pp,Qq,Rr,Ssß,Tt,UÚÙÜÛuúùüû,Vv,Ww,Xx,Yy,Zz"
+msgstr ""
+
+#: src/Query.php:357
+#. translators: This should be a single character to denote "all entries that
+#. didn't fit under one of the alphabet character groups defined". This is used
+#. in English to categorise posts whose title begins with a numeric (0 through
+#. to 9), or some other character that is not a standard English alphabet
+#. letter.
+msgid "#"
 msgstr ""
 
 #: templates/a-z-listing.example.php:45 templates/a-z-listing.php:65
